recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:19: error: not found: value snowSide
		snowSide(levels-1,lg)
                ^SquareKoch:21: error: not found: value snowSide
		snowSide(levels-1,lg)
                ^SquareKoch:23: error: not found: value snowSide
		snowSide(levels-1,lg)
                ^SquareKoch:25: error: not found: value snowSide
		snowSide(levels-1,lg)
                ^SquareKoch:27: error: not found: value snowSide
		snowSide(levels-1,lg)
                ^