recursion.lessons.recursion.koch.SquareKoch.scala.code
def snowSquare (levels:Int, length:Double) {
    squareSide(levels, length);
    right(90);
    setColor(Color.blue);
    squareSide(levels, length);
    right(90);
    setColor(Color.orange);
    squareSide(levels, length);
    right(90);
    setColor(Color.magenta);
    squareSide(levels, length);
    right(90);
}
def squareSide(levels:Int, length:Double) {
if(levels==0) forward(length);
	else{
		var lg=length/3	
		snowSide(levels-1,lg)
		left(60)
		snowSide(levels-1,lg)
		right(120)
		snowSide(levels-1,lg)
		left(60);
		snowSide(levels-1,lg)
		right(120)
		snowSide(levels-1,lg)
	}
}
